--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  
 <style>
 body {
-        background-image: url("back2.png");
+ <h1>Anna</h1>
+        background-image: url("https://github.com/AnneKitz/ALLS/blob/master/back2.png");
 } 
  
 </style>
